# cdk-lambda-rust

./: .gitignore  README.md  cdk.json  package.json  vitest.config.ts
lambda/: Cargo.toml
lambda/src/: main.rs
lib/: cdk-lambda-rust-stack.ts
test/: cdk-lambda-rust.test.ts
