[package]
name = "lambda-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce parallel code generation units for better optimization
panic = "abort"   # Abort on panic
strip = true      # Strip symbols from binary
